"Digit" display: center Network digits and units.

--- a/system-monitor@paradoxxx.zero.gmail.com/stylesheet.css
+++ b/system-monitor@paradoxxx.zero.gmail.com/stylesheet.css
@@ -31,7 +31,7 @@
 .sm-net-unit-label {
     color: #aaa;
     font-size: 8px;
-    padding: 6px 5px 0 2px;
+    padding: 0 5px 0 2px;
 }
 
 .sm-disk-unit-label {
